Date: 20/05/2016
What:
    chore: UK English screen captures of v1.10.0 on a Nexus 5 via https://developer.android.com/distribute/tools/promote/device-art.html
    feat: support for italian and catalan
    chore: new run of Lint, Unit Tests with JUnit, Instrumented Tests with Espresso and UI Automator
###################################################
Date: 20/05/2016
What:
    feat: add standalone mode with a remote-startable invisible activity which will take points and config JSON files before starting the click process
    refactor: pool of UT
    test: add new UT
###################################################
Date: 15/06/2016
What:
    feat: import and export of configuration (click process and points to click on) from/to JSON files in a dedicated app's folder
###################################################
Date: 15/06/2016
What:
    feat: prevent the screen to be off, and force it to be on if off
    test: add instrumented tests and unit tests for feature about the screen
    feat: unlock script
    feat: references to web pages about how to root devices
    chore: clean up logs
    chore: update verbatils
    doc: new build of HTML JavaDoc
    chore: closed tasks #67, #68, #74, #81, #70
###################################################
Date:
What:

###################################################
Date:
What:

###################################################
Date:
What:

###################################################
Date:
What:

###################################################
Date:
What:

###################################################
Date:
What:

###################################################
Date:
What:

###################################################
Date:
What:

###################################################
Date:
What:

###################################################
Date:
What:

###################################################
Date:
What:

###################################################